@@ -26,7 +26,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import org.junit.runner.Result;
 import sun.misc.Signal;
 
@@ -45,8 +45,8 @@ import sun.misc.Signal;
 @SuppressWarnings("SunApi") // for signal handling, see JDK-8349056
 public class BazelTestRunner {
   /**
-   * If no arguments are passed on the command line, use this System property to
-   * determine which test suite to run.
+   * If no arguments are passed on the command line, use this System property to determine which
+   * test suite to run.
    */
   static final String TEST_SUITE_PROPERTY_NAME = "bazel.test_suite";
 
@@ -130,14 +130,17 @@ public class BazelTestRunner {
           TEST_SUITE_PROPERTY_NAME);
       System.err.println();
       System.err.println("This property is set automatically when running with Bazel like such:");
-      System.err.printf("  java -D%s=[test-suite-class] %s%n",
+      System.err.printf(
+          "  java -D%s=[test-suite-class] %s%n",
           TEST_SUITE_PROPERTY_NAME, BazelTestRunner.class.getName());
-      System.err.printf("  java -D%s=[test-suite-class] -jar [deploy-jar]%n",
-          TEST_SUITE_PROPERTY_NAME);
+      System.err.printf(
+          "  java -D%s=[test-suite-class] -jar [deploy-jar]%n", TEST_SUITE_PROPERTY_NAME);
       System.err.println("E.g.:");
-      System.err.printf("  java -D%s=org.example.testing.junit.runner.SmallTests %s%n",
+      System.err.printf(
+          "  java -D%s=org.example.testing.junit.runner.SmallTests %s%n",
           TEST_SUITE_PROPERTY_NAME, BazelTestRunner.class.getName());
-      System.err.printf("  java -D%s=org.example.testing.junit.runner.SmallTests "
+      System.err.printf(
+          "  java -D%s=org.example.testing.junit.runner.SmallTests "
               + "-jar SmallTests_deploy.jar%n",
           TEST_SUITE_PROPERTY_NAME);
       return false;
@@ -207,10 +210,10 @@ public class BazelTestRunner {
                     final List<Thread> nonDaemonAliveThreads =
                         Thread.getAllStackTraces().keySet().stream()
                             .filter(Thread::isAlive)
-                            .filter(Predicate.not(Thread::isDaemon))
-                            .filter(t -> t.threadId() != currentThread.threadId())
-                            .filter(t -> t.threadId() != mainThread.threadId())
-                            .toList();
+                            .filter(thread -> !thread.isDaemon())
+                            .filter(t -> t.getId() != currentThread.getId())
+                            .filter(t -> t.getId() != mainThread.getId())
+                            .collect(Collectors.toList());
 
                     if (nonDaemonAliveThreads.isEmpty()) {
                       return;
@@ -227,22 +230,20 @@ public class BazelTestRunner {
    * @param out Print stream to use
    */
   private static void printStackTracesIfJvmExitHangs(final PrintStream out) {
-    Thread thread = new Thread(new Runnable() {
-      @Override
-      public void run() {
-        sleepUninterruptibly(5);
-        out.println("JVM still up after five seconds. Dumping stack traces for all threads.");
-        StackTraces.printAll(out);
-      }
-    }, "BazelTestRunner: Print stack traces if JVM exit hangs");
+    Thread thread =
+        new Thread(
+            () -> {
+              sleepUninterruptibly(5);
+              out.println("JVM still up after five seconds. Dumping stack traces for all threads.");
+              StackTraces.printAll(out, /* emitJsonThreadDump= */ true);
+            },
+            "BazelTestRunner: Print stack traces if JVM exit hangs");
 
     thread.setDaemon(true);
     thread.start();
   }
 
-  /**
-   * Invokes SECONDS.{@link TimeUnit#sleep(long) sleep(sleepForSeconds)} uninterruptibly.
-   */
+  /** Invokes SECONDS.{@link TimeUnit#sleep(long) sleep(sleepForSeconds)} uninterruptibly. */
   private static void sleepUninterruptibly(long sleepForSeconds) {
     boolean interrupted = false;
     try {
@@ -270,7 +271,7 @@ public class BazelTestRunner {
         new Signal("TERM"),
         __ -> {
           errPrintStream.println("Received SIGTERM, dumping stack traces for all threads\n");
-          StackTraces.printAll(errPrintStream);
+          StackTraces.printAll(errPrintStream, /* emitJsonThreadDump= */ true);
         });
   }
 }
