@@ -33,7 +33,7 @@ import java.io.IOException;
 import java.net.InetAddress;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.net.URL;
+import java.net.URI;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.concurrent.CyclicBarrier;
@@ -82,7 +82,7 @@ public class HttpConnectorMultiplexerIntegrationTest {
 
   @Before
   public void before() throws Exception {
-    when(proxyHelper.createProxyIfNeeded(any(URL.class))).thenReturn(ProxyInfo.NO_PROXY);
+    when(proxyHelper.createProxyIfNeeded(any(URI.class))).thenReturn(ProxyInfo.NO_PROXY);
   }
 
   @After
@@ -116,7 +116,8 @@ public class HttpConnectorMultiplexerIntegrationTest {
       barrier.await();
       try (HttpStream stream =
           multiplexer.connect(
-              new URL(String.format("http://localhost:%d", server.getLocalPort())), HELLO_SHA256)) {
+              URI.create(String.format("http://localhost:%d", server.getLocalPort())),
+              HELLO_SHA256)) {
         assertThat(toByteArray(stream)).isEqualTo("hello".getBytes(US_ASCII));
       }
     }
@@ -149,7 +150,7 @@ public class HttpConnectorMultiplexerIntegrationTest {
               IOException.class,
               () ->
                   multiplexer.connect(
-                      new URL(String.format("http://localhost:%d", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d", server.getLocalPort())),
                       HELLO_SHA256));
       assertThat(e).hasMessageThat().containsMatch("Checksum was .+ but wanted");
     }
@@ -183,7 +184,7 @@ public class HttpConnectorMultiplexerIntegrationTest {
               IOException.class,
               () ->
                   multiplexer.connect(
-                      new URL(String.format("http://localhost:%d", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d", server.getLocalPort())),
                       HELLO_SHA256));
       assertThat(e).hasMessageThat().contains("GET returned 503 MELTDOWN");
     }
