@@ -33,10 +33,10 @@ import com.google.devtools.build.lib.authandtls.StaticCredentials;
 import com.google.devtools.build.lib.bazel.repository.cache.DownloadCache;
 import com.google.devtools.build.lib.events.ExtendedEventHandler;
 import com.google.devtools.build.lib.vfs.DigestHashFunction;
+import com.google.devtools.build.lib.vfs.FileSystemUtils;
 import com.google.devtools.build.lib.vfs.JavaIoFileSystem;
 import com.google.devtools.build.lib.vfs.Path;
 import java.io.ByteArrayInputStream;
-import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.InetAddress;
@@ -45,13 +45,13 @@ import java.net.Socket;
 import java.net.SocketException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
-import java.net.URL;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
@@ -120,7 +120,7 @@ public class HttpDownloaderTest {
           download(
               downloadManager,
               Collections.singletonList(
-                  new URL(String.format("http://localhost:%d/foo", server.getLocalPort()))),
+                  URI.create(String.format("http://localhost:%d/foo", server.getLocalPort()))),
               Collections.emptyMap(),
               Collections.emptyMap(),
               Optional.empty(),
@@ -130,7 +130,7 @@ public class HttpDownloaderTest {
               Collections.emptyMap(),
               "testRepo");
 
-      assertThat(new String(readFile(resultingFile), UTF_8)).isEqualTo("hello");
+      assertThat(new String(FileSystemUtils.readContent(resultingFile), UTF_8)).isEqualTo("hello");
     }
   }
 
@@ -160,7 +160,8 @@ public class HttpDownloaderTest {
           download(
               downloadManager,
               Collections.singletonList(
-                  new URL(String.format("http://localhost:%d/arch:ve.zip", server.getLocalPort()))),
+                  URI.create(
+                      String.format("http://localhost:%d/arch:ve.zip", server.getLocalPort()))),
               Collections.emptyMap(),
               Collections.emptyMap(),
               Optional.empty(),
@@ -170,7 +171,7 @@ public class HttpDownloaderTest {
               Collections.emptyMap(),
               "testRepo");
 
-      assertThat(new String(readFile(resultingFile), UTF_8)).isEqualTo("hello");
+      assertThat(new String(FileSystemUtils.readContent(resultingFile), UTF_8)).isEqualTo("hello");
       assertThat(resultingFile.asFragment().getFileExtension()).isEqualTo("zip");
       assertThat(resultingFile.asFragment().getBaseName()).doesNotContain(":");
     }
@@ -220,9 +221,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path resultingFile =
           download(
@@ -237,7 +238,8 @@ public class HttpDownloaderTest {
               Collections.emptyMap(),
               "testRepo");
 
-      assertThat(new String(readFile(resultingFile), UTF_8)).isEqualTo("content1");
+      assertThat(new String(FileSystemUtils.readContent(resultingFile), UTF_8))
+          .isEqualTo("content1");
     }
   }
 
@@ -288,9 +290,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path resultingFile =
           download(
@@ -305,7 +307,8 @@ public class HttpDownloaderTest {
               Collections.emptyMap(),
               "testRepo");
 
-      assertThat(new String(readFile(resultingFile), UTF_8)).isEqualTo("content2");
+      assertThat(new String(FileSystemUtils.readContent(resultingFile), UTF_8))
+          .isEqualTo("content2");
     }
   }
 
@@ -357,9 +360,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path outputFile = fs.getPath(workingDir.newFile().getAbsolutePath());
       try {
@@ -386,14 +389,67 @@ public class HttpDownloaderTest {
     }
   }
 
-  private static byte[] readFile(Path path) throws IOException {
-    final byte[] data = new byte[(int) path.getFileSize()];
+  @Test
+  public void downloadFrom2UrlsFirstTlsErrorSecondOk() throws IOException, InterruptedException {
+    try (ServerSocket server1 = new ServerSocket(0, 1, InetAddress.getByName(null));
+        ServerSocket server2 = new ServerSocket(0, 1, InetAddress.getByName(null))) {
+      Future<?> server1Future =
+          executor.submit(
+              () -> {
+                // Determine which port was assigned
+                try (Socket socket = server1.accept()) {
+                  // Write garbage to trigger SSL handshake failure on client
+                  socket.getOutputStream().write("Not SSL".getBytes(UTF_8));
+                }
+                return null;
+              });
 
-    try (DataInputStream stream = new DataInputStream(path.getInputStream())) {
-      stream.readFully(data);
+      Future<?> server2Future =
+          executor.submit(
+              () -> {
+                try (Socket socket = server2.accept()) {
+                  readHttpRequest(socket.getInputStream());
+                  sendLines(
+                      socket,
+                      "HTTP/1.1 200 OK",
+                      "Date: Fri, 31 Dec 1999 23:59:59 GMT",
+                      "Connection: close",
+                      "Content-Type: text/plain",
+                      "",
+                      "content2");
+                }
+                return null;
+              });
+
+      final List<URI> urls = new ArrayList<>(2);
+      // Use https for the first one to trigger SSL handshake
+      urls.add(URI.create(String.format("https://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+
+      Path resultingFile = fs.getPath(workingDir.newFile().getAbsolutePath());
+
+      httpDownloader.download(
+          urls,
+          ImmutableMap.of(),
+          StaticCredentials.EMPTY,
+          Optional.empty(),
+          "testCanonicalId",
+          resultingFile,
+          eventHandler,
+          ImmutableMap.of(),
+          Optional.empty(),
+          "testRepo");
+
+      try {
+        server1Future.get();
+        server2Future.get();
+      } catch (ExecutionException e) {
+        throw new IOException(e.getCause());
+      }
+
+      assertThat(new String(FileSystemUtils.readContent(resultingFile), UTF_8))
+          .isEqualTo("content2");
     }
-
-    return data;
   }
 
   @Test
@@ -420,7 +476,7 @@ public class HttpDownloaderTest {
       Path destination = fs.getPath(workingDir.newFile().getAbsolutePath());
       httpDownloader.download(
           Collections.singletonList(
-              new URL(String.format("http://localhost:%d/foo", server.getLocalPort()))),
+              URI.create(String.format("http://localhost:%d/foo", server.getLocalPort()))),
           Collections.emptyMap(),
           StaticCredentials.EMPTY,
           Optional.empty(),
@@ -431,7 +487,7 @@ public class HttpDownloaderTest {
           Optional.empty(),
           "context");
 
-      assertThat(new String(readFile(destination), UTF_8)).isEqualTo("hello");
+      assertThat(new String(FileSystemUtils.readContent(destination), UTF_8)).isEqualTo("hello");
     }
   }
 
@@ -461,7 +517,7 @@ public class HttpDownloaderTest {
           () ->
               httpDownloader.download(
                   Collections.singletonList(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort()))),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort()))),
                   Collections.emptyMap(),
                   StaticCredentials.EMPTY,
                   Optional.empty(),
@@ -517,9 +573,9 @@ public class HttpDownloaderTest {
                 return null;
               });
 
-      final List<URL> urls = new ArrayList<>(2);
-      urls.add(new URL(String.format("http://localhost:%d/foo", server1.getLocalPort())));
-      urls.add(new URL(String.format("http://localhost:%d/foo", server2.getLocalPort())));
+      final List<URI> urls = new ArrayList<>(2);
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server1.getLocalPort())));
+      urls.add(URI.create(String.format("http://localhost:%d/foo", server2.getLocalPort())));
 
       Path destination = fs.getPath(workingDir.newFile().getAbsolutePath());
       httpDownloader.download(
@@ -534,7 +590,7 @@ public class HttpDownloaderTest {
           Optional.empty(),
           "context");
 
-      assertThat(new String(readFile(destination), UTF_8)).isEqualTo("content2");
+      assertThat(new String(FileSystemUtils.readContent(destination), UTF_8)).isEqualTo("content2");
     }
   }
 
@@ -563,7 +619,7 @@ public class HttpDownloaderTest {
       assertThat(
               new String(
                   httpDownloader.downloadAndReadOneUrl(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                       StaticCredentials.EMPTY,
                       Optional.empty(),
                       eventHandler,
@@ -599,7 +655,7 @@ public class HttpDownloaderTest {
           IOException.class,
           () ->
               httpDownloader.downloadAndReadOneUrl(
-                  new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                  URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                   StaticCredentials.EMPTY,
                   Optional.empty(),
                   eventHandler,
@@ -633,7 +689,7 @@ public class HttpDownloaderTest {
       assertThat(
               new String(
                   httpDownloader.downloadAndReadOneUrl(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                       StaticCredentials.EMPTY,
                       Optional.of(
                           Checksum.fromString(
@@ -673,7 +729,7 @@ public class HttpDownloaderTest {
               UnrecoverableHttpException.class,
               () ->
                   httpDownloader.downloadAndReadOneUrl(
-                      new URL(String.format("http://localhost:%d/foo", server.getLocalPort())),
+                      URI.create(String.format("http://localhost:%d/foo", server.getLocalPort())),
                       StaticCredentials.EMPTY,
                       Optional.of(
                           Checksum.fromString(
@@ -709,7 +765,7 @@ public class HttpDownloaderTest {
         () ->
             download(
                 downloadManager,
-                ImmutableList.of(new URL("http://localhost")),
+                ImmutableList.of(URI.create("http://localhost")),
                 Collections.emptyMap(),
                 ImmutableMap.of(),
                 Optional.empty(),
@@ -751,7 +807,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -798,7 +854,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -842,7 +898,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -889,7 +945,7 @@ public class HttpDownloaderTest {
     Path result =
         download(
             downloadManager,
-            ImmutableList.of(new URL("http://localhost")),
+            ImmutableList.of(URI.create("http://localhost")),
             ImmutableMap.of(),
             ImmutableMap.of(),
             Optional.empty(),
@@ -906,7 +962,7 @@ public class HttpDownloaderTest {
 
   public Path download(
       DownloadManager downloadManager,
-      List<URL> originalUrls,
+      List<URI> originalUrls,
       Map<String, List<String>> headers,
       Map<URI, Map<String, List<String>>> authHeaders,
       Optional<Checksum> checksum,
